<resources>
    <string name="app_name">Ultra Doc</string>
    <string name="title_activity_create_doc">CreateDocActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="create_account">Sign Up</string>
    <string name="desc_scedt_logo">Ultra Doc Logo</string>
    <string name="email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="login_desc">Sign In to Ultra Doc</string>
    <string name="welcome_desc">Welcome to Ultra Doc</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="reload">Reload</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="verify_email">Verify</string>
    <string name="create_doc_hint">Document name</string>
    <!--    Palete Section-->
    <string name="title_pal_txt">Title</string>
    <string name="Image_pal_txt">Image</string>
    <string name="location_pal_txt">Location</string>
    <string name="contact_pal_txt">Contact</string>

    <string name="create_doc_btn_txt">Create Doc</string>
    <string name="list_doc_btn_txt">List Doc</string>
    <string name="calander_help_text">Choose where to position the date on document</string>
    <string name="date_position_help_text">Warning! Please choose where to position the the date on the document</string>

    <string name="hint">Type here...</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="enter_text">Enter Text:</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="file_name">File Name</string>
    <string name="edit">Edit</string>
    <string name="search_hint">Search by name or date</string>
    <string name="delete_icon">DELETE ICON</string>
    <string name="pdf_icon">PDF ICON</string>
    <string name="search">Search</string>
    <string name="document_icon">DOCUMENT ICON</string>
</resources>