<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="137dp"
            android:layout_height="132dp"
            android:contentDescription="@string/desc_scedt_logo"
            android:src="@mipmap/ultra_doc_custom" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/login_desc"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:layout_weight="1"
        android:background="@color/ud_grey_light"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="378dp"
                android:layout_height="6dp"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/ud_grey_extra_light"
                android:textColorHint="@color/ud_grey_extra_light" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="378dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/ud_grey_extra_light"
                android:textColorHint="@color/ud_grey_extra_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:layout_marginTop="33dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/emailCreateAccountButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone">


            <!--            create doc button-->

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin_lite"
                android:layout_marginEnd="@dimen/button_horizontal_margin_lite"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/create_doc_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin_lite"
                android:layout_marginEnd="@dimen/button_horizontal_margin_lite"
                android:layout_weight="1"
                android:text="@string/create_doc_btn_txt"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
            <!--            list doc button-->
            <Button
                android:id="@+id/list_doc_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin_lite"
                android:layout_marginEnd="@dimen/button_horizontal_margin_lite"
                android:layout_weight="1"
                android:text="@string/list_doc_btn_txt"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/verify_buttons"
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone">

            <Button
                android:id="@+id/verifyEmailButton"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/verify_email"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="invisible" />

            <Button
                android:id="@+id/reloadButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="6dp"
                android:layout_height="22dp"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/reload"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                android:visibility="invisible" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>